--- a/.github/workflows/flatcc.yml
+++ b/.github/workflows/flatcc.yml
@@ -112,20 +112,20 @@ jobs:
       # Create directory structure
       - name: Prepare Directories
         run: |
-          mkdir -p assets
+          mkdir -p /assets
 
       # Download Artifacts from All Jobs
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: assets
+          path: /assets
       
       # Create GitHub Release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            flatcc-dist/assets/flatcc-linux.zip
+            /assets/flatcc-linux.zip
 #            assets/flatcc-macos.zip
 #            assets/flatcc-windows.zip
         env:
