--- a/.github/workflows/flatcc.yml
+++ b/.github/workflows/flatcc.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-#        os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
             zip_name: flatcc-linux.zip
@@ -22,22 +21,22 @@ jobs:
               cp bin/flatcc ../bin/flatcc
               cp lib/libflatcc.a ../lib/libflatcc.a
               cp lib/libflatccrt.a ../lib/libflatccrt.a
-#          - os: macos-latest
-#            zip_name: flatcc-macos.zip
-#            build_script: |
-#              cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" -B build
-#              cmake --build build --parallel
-#              cp bin/flatcc ../bin/flatcc
-#              cp lib/libflatcc.a ../lib/libflatcc.a
-#              cp lib/libflatccrt.a ../lib/libflatccrt.a
-#          - os: windows-latest
-#            zip_name: flatcc-windows.zip
-#            build_script: |
-#              cmake -DCMAKE_BUILD_TYPE=Release -G "MinGW Makefiles" -B build
-#              cmake --build build --parallel
-#              move bin\\flatcc.exe ..\\bin\\flatcc.exe
-#              move lib\\libflatcc.a ..\\lib\\libflatcc.a
-#              move lib\\libflatccrt.a ..\\lib\\libflatccrt.a
+          - os: macos-latest
+            zip_name: flatcc-macos.zip
+            build_script: |
+              cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" -B build
+              cmake --build build --parallel
+              cp bin/flatcc ../bin/flatcc
+              cp lib/libflatcc.a ../lib/libflatcc.a
+              cp lib/libflatccrt.a ../lib/libflatccrt.a
+          - os: windows-latest
+            zip_name: flatcc-windows.zip
+            build_script: |
+              cmake -DCMAKE_BUILD_TYPE=Release -G "MinGW Makefiles" -B build
+              cmake --build build --parallel
+              move bin\\flatcc.exe ..\\bin\\flatcc.exe
+              move lib\\libflatcc.a ..\\lib\\libflatcc.a
+              move lib\\libflatccrt.a ..\\lib\\libflatccrt.a
 
     steps:
       # Check out the workflow repository
@@ -140,7 +139,5 @@ jobs:
           fail_on_unmatched_files: true
           files: |
             assets/flatcc-linux.zip/flatcc-linux.zip
-#            assets/flatcc-macos.zip
-#            assets/flatcc-windows.zip
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            assets/flatcc-macos.zip/flatcc-macos.zip
+            assets/flatcc-windows.zip/flatcc-windows.zip
